# bootcamp2026

./: pyproject.toml
chapter4/: README.md  deep_neural_network.py  feed_forward.py  gelu.py  gpt_model.py  layer_norm.py  multi_head_attention.py  requirements.txt  test.ipynb  transformer_block.py
