[project]
name = "bootcamp2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "ruff>=0.15.4",
    "tensorflow>=2.15.0",
    "tiktoken==0.7.0",
    "torch>=2.10.0",
    "tqdm>=4.66",
]
